# lensflow

./: docker-compose.toonflow.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0c5d4e3f2a1b_provider_binding_owner_scope.py  0d3c4b5a6e7f_control_flow_execution.py  1b2c3d4e5f6a_resource_oc_provenance.py  471fc0c910c9_foundation_schema.py  (+41 more)
backend/scripts/: create_tables.py
backend/src/: app.py
backend/tests/: test_agent_control_flow_pg.py  test_agent_invocation_pg.py  test_agent_persistence.py  test_agent_rerun_pg.py  test_agent_resource_authorization.py  test_agent_studio_trial_pg.py  test_agent_trace_http_pg.py  test_architect_full_draft_hash.py  test_architect_proposals.py  test_artifact.py  test_atlascloud_live_smoke.py  test_atlascloud_recipe.py  test_batch_a_p0_closeout_pg.py  test_business_nodes_pg.py  test_compiler.py  test_control_flow_persistence.py  test_dynamic_agent_catalog_pg.py  test_governance.py  test_human_gate_pg.py  test_identity.py  test_multi_agent_dag_pg.py  test_p0_http_authorization.py  test_p0_workflow_resource_pg.py  test_project.py  test_quality.py  test_recipe_canvas_invoke_pg.py  test_recipe_execute_authorization_pg.py  test_recipe_persistence.py  test_recipe_runtime_pg.py  test_registry.py  test_registry_catalog.py  test_request_input_pg.py  test_request_input_schema.py  test_runtime.py  test_runtime_callback_http.py  test_runtime_output_binding.py  test_runtime_postgres_integration.py  test_skill_persistence.py  test_sql_workflow_integration.py  test_template.py  (+11 more)
(+222 files in other folders)
