[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toonflow-backend"
version = "0.1.0"
description = "ToonFlow Open Creation Platform - Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.30.0,<0.32",
    "pydantic>=2.9.0,<3",
    "pydantic-settings>=2.5.0,<3",
    "sqlalchemy>=2.0.35,<3",
    "alembic>=1.13.0,<2",
    "asyncpg>=0.30.0,<1",
    "httpx>=0.27.0,<1",
    "python-jose[cryptography]>=3.3.0,<4",
    "passlib[bcrypt]>=1.7.4,<2",
    "python-multipart>=0.0.12,<1",
    "redis>=5.1.0,<6",
    "structlog>=24.4.0,<25",
    "orjson>=3.10.0,<4",
    "psycopg2-binary>=2.9.9,<3",
    "greenlet>=3.0.0,<4",
]

[project.scripts]
toonflow-runtime-worker = "src.domain.runtime.worker_entrypoint:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9",
    "pytest-asyncio>=0.24.0,<1",
    "pytest-cov>=5.0.0,<6",
    "ruff>=0.6.0,<1",
    "mypy>=1.11.0,<2",
    "httpx>=0.27.0,<1",
    "factory-boy>=3.3.0,<4",
    "coverage>=7.6.0,<8",
    "pip-audit>=2.7.0,<3",
]
test = [
    "pytest>=8.3.0,<9",
    "pytest-asyncio>=0.24.0,<1",
    "pytest-cov>=5.0.0,<6",
    "httpx>=0.27.0,<1",
]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["arg-type", "assignment", "return-value", "attr-defined", "index", "call-overload", "union-attr", "var-annotated"]
